--- a/hieradata/roles/worker.yaml
+++ b/hieradata/roles/worker.yaml
@@ -62,7 +62,7 @@ profile::voenv::vo_environments:
     vo_sw_dir: /cvmfs/landslides.cern.ch
     voname: vo_landslides_mossaic_org
 
-singularity::package_ensure: present
+singularity::package_ensure: absent
 singularity::package_name: singularity-runtime
 singularity::manage_epel: false
 # singularity::config_path: /etc/singularity/singularity.conf
