--- a/hieradata/cluster/dice.yaml
+++ b/hieradata/cluster/dice.yaml
@@ -6,7 +6,7 @@ profile::monitored::ganglia_port: 8649
 profile::monitored::ganglia_cluster_name: 'DICE'
 profile::monitored::central_log:
   - '10.129.5.3:514'
-  - '137.222.171.36:514'
+  - 'lcgse02.phy.bris.ac.uk:514'
 
 # global network config
 network::global::vlan: 'yes'
