rsyslog.conf: added rule for auth

--- a/site/profile/files/etc/rsyslog.conf
+++ b/site/profile/files/etc/rsyslog.conf
@@ -42,7 +42,7 @@ $IncludeConfig /etc/rsyslog.d/*.conf
 *.info;mail.none;authpriv.none;cron.none                /var/log/messages
 
 # The authpriv file has restricted access.
-authpriv.*                                              /var/log/secure
+auth,authpriv.*                                              /var/log/secure
 
 # Log all the mail messages in one place.
 mail.*                                                  -/var/log/maillog
