changed hiera origin for packages_to_install and packages_to_remove to profile::default::*

--- a/hieradata/nodes-examples/sm09.hadoop.cluster.yaml
+++ b/hieradata/nodes-examples/sm09.hadoop.cluster.yaml
@@ -10,6 +10,6 @@ site::node_info:
 htcondor::install_repositories: true
 
 # in order to remove package one needs to specify the dependencies as well!
-#packages_to_remove:
+#profile::default::packages_to_remove:
 #  - torque
 #  - lcg-pbs-utils
