--- a/site/profile/files/etc/rsyslog.d/10_local.conf
+++ b/site/profile/files/etc/rsyslog.d/10_local.conf
@@ -1,23 +1,12 @@
-$WorkDirectory /var/lib/rsyslog    # where to place spool files
-$ActionQueueFileName queue      # unique name prefix for spool files
-$ActionQueueMaxDiskSpace 0.05g     # spool space limit (use as much as possible)
-$ActionQueueSaveOnShutdown on   # save messages to disk on shutdown
-$ActionQueueType LinkedList     # run asynchronously
-$ActionResumeRetryCount -1      # infinety retries if host is down
-# Using specified format for default logging format:
-$ActionFileDefaultTemplate RSYSLOG_FileFormat
-
-# Central sysloging configuration
-<% if @it_services_log -%>
-<% @it_services_log.each do |c| -%>
-*.* @<%= c %>
-<% end %>
-<% end %>
-
+$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 # The authpriv file has restricted access.
 if ( $syslogfacility-text == "auth" or $syslogfacility-text == "authpriv" ) then {
     action(type="omfile" file="/var/log/secure")
 }
+
+# Log all kernel messages to the console.
+# Logging much else clutters up the screen.
+#kern.*                                                 /dev/console
 
 # Log anything (except mail) of level info or higher.
 # Don't log private authentication messages!
@@ -25,7 +14,6 @@ if ( $syslogfacility-text == "auth" or $syslogfacility-text == "authpriv" ) then
 
 # Log all the mail messages in one place.
 mail.*                                                  -/var/log/maillog
-
 
 # Log cron stuff
 cron.*                                                  /var/log/cron
