copied rsyslog from calgry

--- a/site/profile/files/etc/rsyslog.d/10_local.conf
+++ b/site/profile/files/etc/rsyslog.d/10_local.conf
@@ -1,7 +1,7 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 # The authpriv file has restricted access.
 if ( $syslogfacility-text == "auth" or $syslogfacility-text == "authpriv" ) then {
-    action(type="omfile" file="/var/log/secure")
+    action(type="omfile" file="/var/log/secure", template="RSYSLOG_TraditionalFileFormat")
 }
 
 # Log all kernel messages to the console.
