move CarbonBlack to common packages

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -4,6 +4,7 @@ classes:
  - site::basic
  - 'profile::base'
  - 'profile::monitored'
+ - cbsensor
 # - 'profile::firewall::setup'
 
 ntp::enable: true
