--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -30,6 +30,8 @@ site::site_info:
   cvmfs_mounts:
     grid.cern.ch:
       cvmfs_quota_limit: 1000
+    config-egi.egi.eu:
+      cvmfs_quota_limit: 1000  
     atlas.cern.ch:
       cvmfs_quota_limit: 10000
     cms.cern.ch:
