feat: enable next-gen monitoring on all nodes

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -6,6 +6,8 @@ classes:
  - 'profile::monitored'
 # - 'profile::firewall::setup'
 
+profile::monitored::next_gen_monitoring: true
+
 ntp::enable: true
 ntp::servers:
   - 137.222.36.2
