--- a/hieradata/roles/htcondor_ce.yaml
+++ b/hieradata/roles/htcondor_ce.yaml
@@ -53,5 +53,9 @@ htcondor_ce::job_routes:
     Requirements: '(x509UserProxyVOName == "ops");'
   dice_mu3e_centos7:
     Requirements: '(x509UserProxyVOName == "mu3e");'
+  dice_na62_centos7:
+    Requirements: '(x509UserProxyVOName == "na62.vo.gridpp.ac.uk");'
+  dice_eucliduk_centos7:
+    Requirements: '(x509UserProxyVOName == "eucliduk.net");'
   dice_other_centos7:
     Requirements: '(x509UserProxyVOName =!= "atlas") && (x509UserProxyVOName =!= "cms") && (x509UserProxyVOName =!= "dune") && (x509UserProxyVOName =!= "gridpp") && (x509UserProxyVOName =!= "ilc") && (x509UserProxyVOName =!= "lhcb") && (x509UserProxyVOName =!= "lsst") && (x509UserProxyVOName =!= "lz") && (x509UserProxyVOName =!= "ops") && (x509UserProxyVOName =!= "mu3e");'
