--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -79,5 +79,6 @@ network::global::ipv6networking: true
 
 site::node_info:
   service_accounts: service_accounts
+  add_prometheus: true
 
 cbsensor::version: "v7"
