--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -2,6 +2,6 @@
 classes:
   - podman
 
-profile::monitored::add_prometheus: false
+profile::monitored::use_prometheus: false
 
 profile::users::shell: '/sbin/nologin'
