--- a/hiera.yaml
+++ b/hiera.yaml
@@ -14,6 +14,8 @@ hierarchy:
       - "firewall/%{::node_info.firewall}.yaml"
       - "users/%{::node_info.users}.yaml"
       - "users/%{::node_info.service_accounts}.yaml"
+  - name: "Foreman hostgroups"
+    mapped_paths: [sorted_path_array, tmp, "hostgroups/%{tmp}.yaml"]
   - name: "Top level public site settings"
     paths:
       - "virtual/%{::is_virtual}.yaml"
