--- a/hieradata/roles/condor_schedd.yaml
+++ b/hieradata/roles/condor_schedd.yaml
@@ -24,18 +24,17 @@ profile::users::users:
     comment: 'condor superuser'
     group: condor
 
-profile::cephfs:
-  keys:
-    - condor
-    - dice-user
-    - xrootd-user
-  mounts:
-    - name: '/condor'
-      fstype: 'cephfs'
-      device: condor@.dicefs=/condor
-    - name: '/dice'
-      fstype: 'cephfs'
-      device: dice-user@.dicefs=/dice
-    - name: '/xrootd'
-      fstype: 'cephfs'
-      device: xrootd-user@.dicefs=/xrootd
+profile::cephfs::keys:
+  - condor
+  - dice-user
+  - xrootd-user
+profile::cephfs::mounts:
+  - name: '/condor'
+    fstype: 'cephfs'
+    device: condor@.dicefs=/condor
+  - name: '/dice'
+    fstype: 'cephfs'
+    device: dice-user@.dicefs=/dice
+  - name: '/xrootd'
+    fstype: 'cephfs'
+    device: xrootd-user@.dicefs=/xrootd
