hiera: add line for admin_accounts

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -14,6 +14,7 @@ hierarchy:
       - "firewall/%{::node_info.firewall}.yaml"
       - "users/%{::node_info.users}.yaml"
       - "users/%{::node_info.service_accounts}.yaml"
+      - "users/%{::node_info.admin_accounts}.yaml"
   - name: "Foreman hostgroups"
     mapped_paths: [sorted_path_array, tmp, "hostgroups/%{tmp}.yaml"]
   - name: "Top level public site settings"
