--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -1,7 +1,42 @@
 ---
 classes:
+  - profile::cvmfs
+  - profile::cephfs
+  - profile::hdfs
+  - packages::manage
   - podman
 
 profile::monitored::use_prometheus: false
 
 profile::users::shell: '/sbin/nologin'
+
+packages::install:
+  - nano
+  - wget
+
+cvmfs::cvmfs_cache_base: '/var/cache/cvmfs'
+
+profile::users::groups:
+  condor:
+    gid: '9618'
+
+profile::users::users:
+  condor:
+    uid: '9618'
+    gid: '9618'
+    home: '/var/spool/condor'
+    shell: '/sbin/nologin'
+    comment: 'condor superuser'
+    group: condor
+
+profile::cephfs::keys:
+  - condor
+  - dice-user
+
+profile::cephfs::mounts:
+  '/condor':
+    device: condor@.dicefs=/condor
+  '/dice':
+    device: dice-user@.dicefs=/dice
+  '/xrootd':
+    device: dice-user@.dicefs=/xrootd
