--- a/hieradata/roles/condor_manager.yaml
+++ b/hieradata/roles/condor_manager.yaml
@@ -4,6 +4,9 @@ classes:
   - podman
   - profile::cephfs
   - packages::manage
+  - profile::htcondor
+
+profile::htcondor::role: "central-manager"
 
 packages::install:
   - nano
