--- a/hieradata/roles/condor_manager.yaml
+++ b/hieradata/roles/condor_manager.yaml
@@ -20,7 +20,7 @@ profile::users::users:
   condor:
     uid: '9618'
     gid: '9618'
-    home: '/var/spool/condor'
+    home: '/var/lib/condor'
     shell: '/sbin/nologin'
     comment: 'condor superuser'
     group: condor
