xrootd: add Cephfs mount to gateway

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -5,6 +5,7 @@ classes:
  - 'profile::base'
  - 'profile::monitored'
  - profile::users::admin
+ - profile::cephfs
 # - 'profile::firewall::setup'
 
 packages:
@@ -84,3 +85,10 @@ site::node_info:
   service_accounts: service_accounts
 
 cbsensor::version: "v7"
+
+profile::cephfs::keys:
+  - xrootd
+
+profile::cephfs::mounts:
+  '/xrootd':
+    device: dice-user@.dicefs=/xrootd
