--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -5,6 +5,7 @@ classes:
   - 'profile::arc_env'
   - 'profile::voenv'
   - profile::cgroups
+  - profile::cephfs
 
 site::node_info:
   firewall: worker_node
@@ -74,3 +75,12 @@ singularity::allow_containers:
   squashfs: 'yes'
   extfs: 'yes'
   dir: 'yes'
+
+profile::cephfs::keys:
+  - dice-user
+
+profile::cephfs::mounts:
+  '/dice':
+    device: dice-user@.dicefs=/dice
+  '/xrootd':
+    device: dice-user@.dicefs=/xrootd
