--- a/hieradata/roles/condor_schedd.yaml
+++ b/hieradata/roles/condor_schedd.yaml
@@ -9,6 +9,12 @@ classes:
   - profile::htcondor
 
 profile::htcondor::role: "submit"
+profile::htcondor::submit::periodic_remove_requirements:
+  RemoveDefaultJobWallTime: "RemoteWallClockTime > 8 * 30 * 24 * 60 * 60"
+  RemoveDefaultJobCpuTime: "RemoteSysCpu + RemoteUserCpu > 30 * 24 * 60 * 60"
+  RemoveMemoryUsage: "ResidentSetSize_RAW > 1000 * RequestMemory"
+  RemoveHeldJobs: "(JobStatus==5 && (CurrentTime - EnteredCurrentStatus) > 30 * 60)"
+  RemoveMultipleRunJobs: "JobRunCount > 10"
 
 packages::install:
   - nano
