--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -5,6 +5,8 @@ classes:
   - packages::manage
   - podman
   - profile::htcondor
+  - profile::apptainer
+  - profile::heposlibs
 
 profile::htcondor::role: "execute"
 
