--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -85,7 +85,7 @@ site::node_info:
 
 cbsensor::version: "v7"
 
-apptainer::version: '1.3.3-1'
+apptainer::version: '1.3.3'
 apptainer::install_setuid: false
 apptainer::use_nvidia_container_cli: 'no'
 apptainer::bind_paths:
