ceph_condor: fix name for extra packages to be installed

--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -15,9 +15,7 @@ profile::monitored::use_prometheus: false
 
 profile::users::shell: '/sbin/nologin'
 
-packages::install:
-  - nano
-  - wget
+profile::extra::packages_to_install:
   - podman-docker
 
 cvmfs::cvmfs_cache_base: '/var/cache/cvmfs'
