--- a/hieradata/roles/htcondor_worker.yaml
+++ b/hieradata/roles/htcondor_worker.yaml
@@ -1,6 +1,6 @@
 ---
 classes:
-  - role::htcondor_worker
+  # - role::htcondor_worker
   - 'profile::cvmfs'
   - 'profile::arc_env'
   - 'profile::voenv'
