add /dice mount to vm hosts

--- a/hieradata/roles/vm_host.yaml
+++ b/hieradata/roles/vm_host.yaml
@@ -1,2 +1,13 @@
 ---
 profile::base::automatic_updates: false
+
+classes:
+  - profile::cephfs
+  - packages::manage
+
+profile::cephfs::keys:
+  - dice-user
+
+profile::cephfs::mounts:
+  '/dice':
+    device: dice-user@.dicefs=/dice
