--- a/hieradata/roles/condor_gpu.yaml
+++ b/hieradata/roles/condor_gpu.yaml
@@ -7,6 +7,7 @@ classes:
   - profile::htcondor
   - profile::apptainer
   - profile::heposlibs
+  - profile::nfs_mounts
 
 profile::htcondor::role: "execute"
 profile::htcondor::execute::use_gpu: true
@@ -46,3 +47,14 @@ profile::cephfs::mounts:
     device: dice-user@.dicefs=/dice
   '/xrootd':
     device: dice-user@.dicefs=/xrootd
+
+profile::nfs_mounts::mounts:
+  '/shared/scratch':
+    path: /exports/scratch
+    read_only: false
+  '/users':
+    path: /exports/scratch
+    read_only: false
+  '/software':
+    path: /exports/scratch
+    read_only: false
