--- a/hieradata/roles/condor_schedd.yaml
+++ b/hieradata/roles/condor_schedd.yaml
@@ -7,6 +7,7 @@ classes:
   - profile::htcondor
   - profile::apptainer
   - profile::heposlibs
+  - profile::nfs_mounts
 
 profile::htcondor::role: "submit"
 profile::htcondor::submit::periodic_remove_requirements:
@@ -45,3 +46,14 @@ profile::cephfs::mounts:
     device: dice-user@.dicefs=/dice
   '/xrootd':
     device: dice-user@.dicefs=/xrootd
+
+profile::nfs_mounts::mounts:
+  '/shared/scratch':
+    path: /exports/scratch
+    read_only: false
+  '/users':
+    path: /exports/scratch
+    read_only: false
+  '/software':
+    path: /exports/scratch
+    read_only: false
