--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -48,8 +48,8 @@ profile::nfs_mounts::mounts:
     path: /exports/scratch
     read_only: false
   '/users':
-    path: /exports/scratch
+    path: /exports/users
     read_only: true
   '/software':
-    path: /exports/scratch
+    path: /exports/software
     read_only: true
