profile::users: adjust group permissions per mount

--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -47,9 +47,11 @@ profile::nfs_mounts::mounts:
   '/shared/scratch':
     path: /exports/scratch
     read_only: false
+    group: users
   '/users':
     path: /exports/users
     read_only: true
   '/software':
     path: /exports/software
     read_only: true
+    group: users
