--- a/hieradata/roles/condor_gpu.yaml
+++ b/hieradata/roles/condor_gpu.yaml
@@ -60,3 +60,8 @@ profile::nfs_mounts::mounts:
     path: /exports/software
     read_only: false
     group: users
+  '/opt/astro':
+    server: echidna.star.bris.ac.uk
+    path: /data/echidna1
+    read_only: true
+    group: dice-astro
