condor: add 9618 to open ports

--- a/hieradata/roles/condor_manager.yaml
+++ b/hieradata/roles/condor_manager.yaml
@@ -31,3 +31,10 @@ profile::cephfs::keys:
 profile::cephfs::mounts:
   '/condor':
     device: condor@.dicefs=/condor
+
+firewalld::ports:
+  "Open standard condor ports":
+    ensure: present
+    zone: public
+    port: 9618
+    protocol: 'tcp'
